// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SettingCell render encrypted with fullName 1`] = `
<div>
  <div
    style="display: contents;"
  >
    <span>
      <strong>
        <div
          class=""
        >
          *****
        </div>
      </strong>
    </span>
  </div>
</div>
`;

exports[`SettingCell render ordinary 1`] = `
<div>
  <div
    style="display: contents;"
  >
    <span>
      <div
        class=""
      >
        root@example.com
      </div>
    </span>
  </div>
</div>
`;

exports[`SettingCell render without fullName 1`] = `
<div>
  <div
    style="display: contents;"
  >
    <span>
      <div
        class=""
      >
        No
      </div>
    </span>
  </div>
</div>
`;
